# quadratictheory

./: .gitignore  README.md  install.sh  pyproject.toml
analysis/: cccbdb_comparison.py  test.py
analysis/benchmarks/: Luzanov.py  cc_densities.py  cccbdb_comparison.py  hellmann-feynmann.py  imag_time_prop.py  lie_et_al.py  plot_utils.py  static_energy.py
analysis/chemistry/: 2d_particle_densities.py  LiH.tar.xz  N2.csv  compare_expvals.py  diagnostics.py  dissociation.py  dissociation_from_file.py  fci_utils.py  h4_rectangle.py  multipole_moments.py  multipole_moments_new.py  plot_density.py  plot_dissociation.py  plot_utils.py  qccd_diss.py  run_tdcc.py  signals_tdcc.py  spectra.py  spectra_tdcc.py  tdccsd_vs_tdqccsd_integration.py  utils.py
analysis/dots/: helgaker.py  zanghellini.py
analysis/weights/: fci_pyscf.py  geometries.py  plot_utils.py  weights.py  weights_validate.py  weigths_big_basis.py
examples/: n2_example.py  time_dependent_lih_example.py  tmpnw_23goy
src/analysis/: test.py
src/basis/: basis.py
src/clusterfock/: __init__.py
src/quadratictheory/: __init__.py
symbolic/: ccd.py  ccd_new_test.py  ccsd.py  drudge_utils.py  einsum_print_fixer.py  gristmill_utils.py  html_latex_fixer.py  latex.py  permutations.py  qccd.py  qccd_test.py  qccsd.py  qccsd_densities.py  qccsd_new.py  qccsd_test.py  quadratic_weights.py  rccd.py  rccsd.py  rqccd.py  rqccd_new.py  rqccsd.py  uccd.py
symbolic/einsum_formatted/: TEST_qccsd_energy_addition.txt  TEST_qccsd_l2_addition.txt  TEST_qccsd_l2_addition_optimized.txt  TEST_qccsd_t1trans_energy_addition.txt  TEST_qccsd_t1trans_energy_addition_optimized.txt  TEST_qccsd_t1trans_l1_addition.txt  TEST_qccsd_t1trans_l1_addition_optimized.txt  TEST_qccsd_t1trans_l2_addition.txt  TEST_qccsd_t1trans_l2_addition_optimized.txt  TEST_qccsd_t1trans_t1_addition.txt  TEST_qccsd_t1trans_t1_addition_optimized.txt  TEST_qccsd_t1trans_t2_addition.txt  TEST_qccsd_t1trans_t2_addition_optimized.txt  TEST_qccsd_t2_addition.txt  TEST_rqccd_energy_addition.txt  TEST_rqccd_l2_addition.txt  TEST_rqccd_l2_addition_optimized.txt  TEST_rqccd_t2_addition.txt  TEST_rqccd_t2_addition_optimized.txt  ccd_energy_addition.txt  ccd_energy_t2.txt  (+122 more)
tests/: test_basis.py  test_coupledcluster.py  test_coupledcluster_densities.py  test_coupledcluster_t1transform.py  test_hartreefock.py  test_mixer.py  test_pulse.py  test_quadcoupledcluster_t1transform.py  test_sampler.py  test_td_coupledcluster.py
(+606 files in other folders)
