[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MasterCode"
description = "Code made during my master thesis"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.8"
authors = [
  {name = "Håkon Kvernmoen", email = "haakokve@uio.no"}
]
classifiers = [
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy~=1.25.2",
    "scipy~=1.11.2",
    "matplotlib~=3.8.0",
]

[project.urls]
"Homepage" = "https://github.com/hkve/MasterCode"

[tool.black]
line-length = 100
