[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quadratictheory"
description = "Code made during my master thesis"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.8"
authors = [
  {name = "Håkon Kvernmoen", email = "haakokve@uio.no"}
]
classifiers = [
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy~=1.25.2",
    "scipy~=1.11.2",
    "pyscf~=2.3.0",
    "tqdm~=4.64.1",
    "pytest~=7.4.2",
    "rk4_integrator@git+https://github.com/HyQD/rk4-integrator#egg=master",
    "gauss_integrator@git+https://github.com/HyQD/gauss-integrator#egg=master",
]

[project.urls]
"Homepage" = "https://github.com/hkve/quadratictheory"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

